fixing breadcrumbs z-index

--- a/src/scss/common/ui.scss
+++ b/src/scss/common/ui.scss
@@ -72,6 +72,8 @@ address {
     color: #fff;
     font-size: 10px;
     line-height: 1.4;
+    position: relative;
+    z-index: 10;
     &__list-item {
         // outline: 1px solid yellow;
         gap: 5px;
